fixes on mobile version

--- a/style.css
+++ b/style.css
@@ -239,7 +239,7 @@ footer{
     grid-column: 1 / 2;
     grid-row: 24 / 25 ;
     background-color: white;
-    height: 500px;
+    height: 600px;
 }
 .grid-item-24 img{
     justify-self: start;
@@ -250,7 +250,7 @@ footer{
     grid-row: 24 / 25 ;
     background-color: white;
     display: inline;
-    height: 500px;
+    height: 600px;
     text-align: left;
     white-space: pre-line;
 }
