--- a/washers_pages/style.css
+++ b/washers_pages/style.css
@@ -18,14 +18,14 @@ main{
 }
 .grid {
     display: grid;
-    margin-top: 100px;
+    margin-top: 40px;
     grid-template-columns: 1fr 1fr;
     grid-gap: 8px;
     padding: 8px;
 }
 
 .grid-item-1{
-    margin-top: 200px;
+    margin-top: 100px;
     grid-column: 1 / span 2;
     height: 100px;
     font-weight: bold;
@@ -46,6 +46,7 @@ main{
     grid-row: 4 / 5;
     display: inline;
     font-size: 2.5rem;
+    text-decoration: none;
 }
 .grid-item-5{
     grid-column: 1 / span 2;
